# senus-board-report

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  WRITEUP.md  docker-compose.yml  render.yaml
apps/api/: Dockerfile  conftest.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 069bf794ce4d_initial_schema.py  86afa5a385e7_add_half_year_period_type.py  a6c8502e3605_add_repaid_date_and_note_to_debt_.py
apps/api/app/: main.py
apps/api/app/ai/: extraction.py  insights.py
apps/api/app/core/: config.py  db.py  deps.py  security.py
apps/api/app/models/: __init__.py  documents.py  enums.py  financial.py  insights.py  user.py
apps/api/app/routers/: auth.py  insights.py  metrics.py  targets.py
apps/api/app/schemas/: auth.py  extraction.py  insights.py  metrics.py  targets.py
apps/api/app/services/: insights.py  metrics.py
apps/api/scripts/: ingest.py  seed_user.py
apps/api/tests/: conftest.py  factories.py  test_auth_endpoints.py  test_config.py  test_extraction_schema.py  test_ingest_load.py  test_ingest_monthly.py  test_insights.py  test_metrics_cash_liquidity.py  test_metrics_growth.py  test_metrics_profitability.py  test_metrics_returns.py  test_metrics_solvency.py  test_security.py  test_targets_endpoints.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/api/: generate-insight.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/lib/: api.ts  (+5 more)
data/extracted/: senus_adf_audited_fy2025.json  senus_hy2026_results.json  senus_information_document.json
docs/: assignment-brief.md
(+37 files in other folders)
